<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bgbotchat"
        android:scaleType="centerCrop"
        android:alpha="0.4"
        android:contentDescription="@string/background_image" />

    <View
        android:id="@+id/green_canvas"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/color2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/chat_bot"
        android:layout_marginTop="10dp"
        android:textColor="@color/background_light"
        android:textSize="30sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/green_canvas"
        app:layout_constraintStart_toStartOf="@+id/green_canvas"
        app:layout_constraintTop_toTopOf="@+id/green_canvas" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@+id/green_canvas"
        app:layout_constraintBottom_toTopOf="@+id/inputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="14dp"
        android:paddingHorizontal="16dp"
        android:background="@color/color3"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/inputMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ceritakan"
            android:importantForAutofill="no"
         />

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/sendButton"
            android:backgroundTint="@color/color2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonPlayScript"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="5dp"

        android:background="@drawable/button_play_script_background"
        android:enabled="false"
        android:text="@string/play_script"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/green_canvas"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textViewError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color1"
        android:layout_marginTop="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlayScript" />

    <ImageButton
        android:id="@+id/infofragment"
        android:layout_width="72dp"
        android:layout_height="68dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_info_24"
        app:layout_constraintBottom_toBottomOf="@+id/chatRecyclerView"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>